--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -1,64 +1,158 @@
-/* Styles.css */
+/* Global center */
+.idol-card-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  font-family: "Montserrat", sans-serif;
+}
 
-.idol-card {
-  position: relative;
-  width: 300px;
-  margin: 20px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
+/* Style card */
+figure {
+  margin: 0;
+  color: rgb(227, 227, 227);
+  background-color: rgb(160, 160, 160);
+  box-shadow: 0 0 5px #3b3b3b;
   overflow: hidden;
-  background-color: #fff;
+  border-radius: 8px;
+  height: 400px;
+  width: 275px;
+  opacity: 1;
+  transition: opacity 500ms ease-out, transform 250ms ease-out;
+  position: relative;
+  animation: fadeIn 1s forwards;
 }
 
-.idol-image {
+/* Animation fadein card */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* Style picture */
+figure > img {
+  height: 100%;
   width: 100%;
-  height: auto;
+  object-fit: cover;
 }
 
-.view-description-button {
-  padding: 10px;
-  background-color: #007bff;
-  color: white;
-  border: none;
+/* hover card */
+figure:hover {
   cursor: pointer;
-  width: 100%;
+  transform: scale(1.02);
+}
+
+/* Style description */
+figure > figcaption {
+  padding: 16px 0;
+  font-size: 1.5rem;
+}
+
+/* Fade effect */
+figure.fade {
+  opacity: 0.5;
+  transition: opacity 300ms ease-in-out;
+}
+
+/* button more... */
+.view-description-button {
+  padding: 10px 20px;
+  background-color: #434343;
+  border: none;
+  color: white;
+  font-size: 1rem;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease, opacity 1s
+    ease-in-out;
+  position: absolute;
+  bottom: 16px;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  animation: buttonFadeIn 1s forwards 1s;
+}
+
+/* Fadein for more... */
+@keyframes buttonFadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .view-description-button:hover {
-  background-color: #0056b3;
+  background-color: #8397b3;
+  transform: scale(1.05) translateX(-50%);
 }
 
+/* Overlay  */
 .description-overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.7);
-  color: white;
+  background: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
-  z-index: 10;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 300ms ease, visibility 300ms ease;
+  font-family: "Montserrat", sans-serif;
 }
 
+.description-overlay.active {
+  opacity: 1;
+  visibility: visible;
+  font-family: "Montserrat", sans-serif;
+}
+
+/* Description */
 .description-content {
-  text-align: center;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: #beb9ab;
   padding: 20px;
   border-radius: 8px;
+  max-width: 500px;
+  width: 80%;
+  text-align: center;
+  animation: fadeIn 0.5s ease-out;
+  font-family: "Montserrat", sans-serif;
 }
 
+/* Animation fadein */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* Button close */
 .close-button {
-  margin-top: 10px;
-  padding: 10px;
-  background-color: red;
-  color: white;
+  padding: 8px 16px;
+  background-color: #9ba081;
   border: none;
+  color: white;
+  font-size: 1rem;
+  border-radius: 8px;
   cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
 .close-button:hover {
-  background-color: darkred;
+  background-color: #505b47;
+  transform: scale(1.05);
 }
