--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,500;1,500&family=Peralta&family=Silkscreen:wght@400;700&family=Source+Sans+3:ital@0;1&display=swap");
 
+body {
+  background-image: url("https://i.ibb.co/1JRNkzMM/wallpaperflare-com-wallpaper.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  box-sizing: border-box;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -31,14 +39,5 @@
 
 .nav-link:hover {
   color: #000000;
-  opacity: 0.8; /* Effet de fondu */
-}
-
-body {
-  background-image: url("https://i.ibb.co/1JRNkzMM/wallpaperflare-com-wallpaper.jpg");
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  margin: 0;
-  height: 100vh;
+  opacity: 0.8;
 }
