--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -30,7 +30,7 @@ body {
 }
 
 .nav-link {
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   text-decoration: none;
   font-size: 16px;
   font-weight: bold;
@@ -38,6 +38,6 @@ body {
 }
 
 .nav-link:hover {
-  color: #000000;
+  color: #ffffff;
   opacity: 0.8;
 }
